[#925] Fixing CSS to get FACA tab on same line, and tweaking some other things that were out of place

--- a/data/media/css/main.css
+++ b/data/media/css/main.css
@@ -305,7 +305,7 @@ div#nav li a, #dataTabs li a{
 	display: block;
 	color: #4B3905;
 	font-weight: bold;
-	font-size: 90%;
+	font-size: 76%;
 	text-decoration: none;
 }
 
@@ -387,7 +387,7 @@ li.filter{
 #dataTabs li a {
     background-color: #DBD7CD;
 	border-bottom: 2px solid #A59C82;
-    padding: 8px;
+    padding: 6px;
 }
 
 #dataTabs li a:hover {
@@ -409,7 +409,7 @@ body.filteredSearch #dataTabs {
 	z-index: 0;
 	width: auto;
 	border-bottom: 2px solid #A59C82;
-	height: 42px;
+	height: 34px;
 	margin-top: 20px;
 }
 
